--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,84 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
 
-  :root {
-    --primary-color: #000000;
-    --secondary-color: #ffffff;
-    --text-color: #ffffff;
-    --background-color: #190031;
-    --border-color: #663399;
-  }
+:root {
+  --primary-color: #000000;
+  --secondary-color: #ffffff;
+  --text-color: #ffffff;
+  --background-color: #190031;
+  --border-color: #8000ff;
+}
 
-  @font-face {
-    font-family: 'Hahmlet';
-    src: url(/Hahmlet.ttf);
-  }
-  body {
-    background: var(--background-color);
-    margin: 0;
-  }
-  
-  canvas {
-    width: 1024px;
-    height: 576px;
-    padding: 2px;
-    border: 10px solid var(--border-color);
-    border-radius: 8px;
-    box-shadow: 0 0 10px 10px #15002a
-  }
+@font-face {
+  font-family: "Ninja";
+  src: url(/NormalFont.ttf);
+}
+body {
+  background: var(--background-color);
+  margin: 0;
+  font-family: "Ninja", sans-serif;
+  color: var(--border-color);
+}
 
-  h1 {
-    font-family: 'Hahmlet', sans-serif;
-    color: var(--text-color);
-    font-size: 50px;
-    text-align: center;
-    margin-bottom: 20px;
-  
-  }
+canvas {
+  width: 1024px;
+  height: 576px;
+  padding: 2px;
+  border: 10px solid var(--border-color);
+  border-radius: 8px;
+  box-shadow: 0 0 10px 10px #0b0016;
+}
 
-  .main {
-    display: flex;
-    flex-direction: column;
-    justify-content:center;
-    align-items: center;
-    min-height: 100vh;
-    gap:20px
-  }
+h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 20px;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: var(--text-color);
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  gap: 20px;
+}
+
+#gameOver {
+  display: none;
+  text-align: center;
+  background-color: none;
+}
+
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: flex;
+  font-size: 30px;
+  padding: 10px;
+  text-align: center;
+  color: var(--text-color);
+}
+
+.button-visible {
+  display: flex;
+  font-size: 30px;
+  padding: 10px;
+  text-align: center;
+  color: var(--text-color);
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: var(--border-color);
+  border: 4px solid var(--secondary-color)
+}
