--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ h1 {
   -webkit-text-stroke-color: var(--text-color);
 }
 
+h2 {
+  font-size: 25px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
@@ -52,11 +56,27 @@ h1 {
   gap: 20px;
 }
 
-#gameOver {
-  display: none;
-  text-align: center;
-  background-color: none;
+.tuto {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: var(--text-color);
+  letter-spacing: 2px;
+
 }
+
+.storytelling {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  color: var(--text-color);
+  letter-spacing: 2px;
+}
+
 
 
 .hidden {
@@ -80,5 +100,6 @@ h1 {
   border-radius: 8px;
   cursor: pointer;
   background-color: var(--border-color);
-  border: 4px solid var(--secondary-color)
+  border: 4px solid var(--secondary-color);
+  margin-bottom: 30px;
 }
