--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --text-color: #ffffff;
   --background-color: #190031;
   --border-color: #8000ff;
+  --hover-color: #e97400;
 }
 
 @font-face {
@@ -24,6 +25,28 @@ body {
   margin: 0;
   font-family: "Ninja", sans-serif;
   color: var(--border-color);
+}
+#play-button {
+  position: absolute;
+  top: 68%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10; 
+  display: flex;
+  font-size: 30px;
+  padding: 10px;
+  text-align: center;
+  color: var(--text-color);
+  border-radius: 8px;
+  cursor: pointer;
+  background-color: var(--border-color);
+  border: 4px solid var(--secondary-color);
+  margin-bottom: 30px;
+}
+
+#play-button:hover, .button-visible:hover {
+  background-color: var(--hover-color);
+  color: var(--secondary-color);
 }
 
 canvas {
@@ -76,6 +99,7 @@ h2 {
   color: var(--text-color);
   letter-spacing: 2px;
 }
+
 
 
 
